# elec_498a_graph_rag

./: .gitignore  CICD_IMPLEMENTATION.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  read_text_units.py  requirements.txt
.github/workflows/: ci.yml
src/: chunker.py  graphrag_service.py  loader.py  main.py  test_model_efficiency_local.py
test_data/: .env.example  settings.yaml
test_data/prompts/: community_report_text.txt
test_data/update_output/20260201-150346/delta/: context.json  stats.json
test_data/update_output/20260201-150401/delta/: context.json  stats.json
test_data/update_output/20260201-150630/delta/: context.json  stats.json
test_data/update_output/20260201-150631/delta/: context.json  stats.json
test_data/update_output/20260205-144455/delta/: context.json  stats.json
test_data/update_output/20260205-144529/delta/: context.json  stats.json
test_data/update_output/20260205-144530/delta/: context.json  stats.json
test_data/update_output/20260205-144738/delta/: context.json  stats.json
test_data/update_output/20260205-144739/delta/: context.json  stats.json
tests/: conftest.py  test_chunker.py  test_graphrag_integration.py  test_graphrag_service.py  test_main.py
