[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elec-498a-graph-rag"
version = "0.1.0"
description = "Microsoft GraphRAG system for clinical health guidelines - ELEC 498A Capstone Project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Omar Afify", email = "20oamz@queensu.ca" },
  { name = "Nicolas Poirier", email = "20ndp3@queensu.ca" },
  { name = "Sebastien Terrade", email = "20sct7@queensu.ca" },
  { name = "Ian Fairfield", email = "20idf@queensu.ca" },
]
keywords = ["graphrag", "rag", "knowledge-graph", "clinical-guidelines", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # Core dependencies
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "python-multipart>=0.0.6",
  # GraphRAG dependencies
  "graphrag>=2.7.0",  # Requires v2.7.0+ for native Ollama/LiteLLM support
  "neo4j>=5.14.0",
  "lancedb>=0.3.0",
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.25.0",  # For FastAPI testing
  "ruff>=0.1.0",
  "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/ianfv/elec_498a_graph_rag"
Repository = "https://github.com/ianfv/elec_498a_graph_rag"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=src",
  "--cov-branch",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=html",
  "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/test_*.py", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
lint.ignore = [
  "E501", # line too long, handled by formatter
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]     # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
